@@ -1,0 +1,1 @@
+Will manage discord rich presence in the future
