@@ -1,0 +1,1 @@
+will manage last.fm intergration in the future
